# PathReversal

./: .gitignore  README.md  pyproject.toml
src/: AgentSink.py  FifoNode.py  Message.py  NodeStatus.py  PathReversal.py  driver.py  readme
src/path_reversal/: __init__.py  __main__.py  algorithm.py  demo.py  driver.py  message.py  node.py  sink.py  status.py  visualization.py
src/util/: example_scenario.txt  node.txt
tests/: conftest.py
tests/integration/: test_multi_node.py
tests/unit/: test_algorithm.py  test_message.py
